# leads-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_CONTEXT.md  README.md  pyproject.toml
alembic/: env.py
data/: bali_leads.db
docs/: ADR.md  MANIFESTO.md  PRODUCT.md  VISION.md
tests/: conftest.py  test_base.py  test_company_discovery_candidate_cli.py  test_company_discovery_candidate_promotion.py  test_company_discovery_candidate_promotion_cli.py  test_company_discovery_candidate_promotion_integration.py  test_company_discovery_candidate_review.py  test_company_discovery_candidate_review_integration.py  test_company_discovery_cli.py  test_company_discovery_persist_cli_integration.py  test_company_discovery_persistence.py  test_company_discovery_profile_execution.py  test_company_discovery_profile_persistence.py  test_company_discovery_provider_contracts.py  test_company_discovery_result_adapter.py  test_company_discovery_run_profile_cli.py  test_company_discovery_serpapi_adapter.py  test_company_discovery_serpapi_provider.py  test_company_discovery_service.py  test_company_discovery_staging_adapter.py  test_company_discovery_staging_cli.py  test_company_discovery_staging_migration.py  test_company_discovery_staging_models.py  test_company_discovery_staging_normalization.py  test_company_discovery_staging_orchestration.py  test_company_discovery_staging_orchestration_integration.py  test_company_discovery_staging_repository.py  test_company_discovery_staging_schemas.py  test_company_enrichment_cli.py  test_company_enrichment_foundation.py  (+41 more)
(+116 files in other folders)
