[project]
name = "bali-leads-platform"
version = "0.1.0"
description = "AI-powered B2B Lead Generation Platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Bali Leads Platform Team" }
]

dependencies = [
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "httpx>=0.28.1",
    "openai>=1.95.1",
    "loguru>=0.7.3",
    "typer>=0.16.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]